Corrected the format.

--- a/paper/paper.bib
+++ b/paper/paper.bib
@@ -1,16 +1,16 @@
-@misc{Who2019,
+@misc{Who:2019,
   title={Deafness and hearing loss},
   url={https://www.who.int/news-room/fact-sheets/detail/deafness-and-hearing-loss},
   note={Accessed: 2019-08-07}
 }
 
-@misc{SummaryHealthStatistics2017,
+@misc{SummaryHealthStatistics:2017,
   title={Summary health statistics: national health interview survey, 2017},
   url{https://ftp.cdc.gov/pub/Health_Statistics/NCHS/NHIS/SHS/2017_SHS_Table_A-6.pdf},
   note={Accessed: 2019-08-07}
 }
 
-@article{Blackwell2014,
+@article{Blackwell:2014,
   title={Summary health statistics for US adults: national health interview survey, 2012},
   author={Blackwell, Debra L and Lucas, Jacqueline W and Clarke, Tainya C},
   journal={Vital and health statistics. Series 10, Data from the National Health Survey},
@@ -19,19 +19,19 @@
   year={2014}
 }
 
-@misc{MvvmWikipedia2019,
+@misc{MvvmWikipedia:2019,
   title={Model-view-viewmodel},
   url={https://en.wikipedia.org/wiki/Model%E2%80%93view%E2%80%93viewmodel},
   note={Accessed: 2019-08-07}
 }
 
-@misc{MvvmMicrosoft2019,
+@misc{MvvmMicrosoft:2019,
   title={The Model-view-viewmodel pattern},
   url={https://docs.microsoft.com/en-us/xamarin/xamarin-forms/enterprise-application-patterns/mvvm},
   note={Accessed: 2019-08-07}
 }
 
-@book{KramerAudiology2019,
+@book{KramerAudiology:2019,
   title={Audiology: science to practice},
   author={Kramer, Steven and Brown, David K},
   year={2019},
@@ -39,7 +39,7 @@
   publisher={Plural Publishing}
 }
 
-@book{GelfandEssentials2016,
+@book{GelfandEssentials:2016,
   title={Essentials of Audiology},
   author={Gelfand, Stanley A},
   year={2016},
@@ -47,7 +47,7 @@
   publisher={Thieme Medical Publishers}
 }
 
-@book{KatzHandbook2015,
+@book{KatzHandbook:2015,
   title={Handbook of clinical audiology},
   author={Katz, Jack and Chasin, Marshall and English, Kristina M and Hood, Linda J and Tillery, Kim L},
   year={2015},
@@ -55,7 +55,7 @@
   publisher={Wolters Kluwer Health}
 }
 
-@book{BessAudiology2003,
+@book{BessAudiology:2003,
   title={Audiology: the fundamentals},
   author={Bess, Fred H and Humes, Larry E},
   year={2008},
@@ -63,7 +63,7 @@
   edition={4}
 }
 
-@book{DhingraDiseases2014,
+@book{DhingraDiseases:2014,
   title={Diseases of ear, nose and throat \& head and neck surgery},
   author={Dhingra, PL and Dhingra, Shruti},
   year={2018},
@@ -71,34 +71,34 @@
   edition={7}
 }
 
-@misc{Bauman2016,
+@misc{Bauman:2016,
   title={Measuring hearing loss: Is it decibels or percent? and calculating hearing disability},
   url={http://hearinglosshelp.com/wp-content/uploads/2016/05/Measuring-Hearing-Loss-2016.pdf},
   author={Bauman, Neil G},
   note={Accessed: 2019-08-07}
 }
 
-@misc{BritishAudiologyCaloric2010,
+@misc{BritishAudiologyCaloric:2010,
   title={Recommended procedure: The caloric test},
   url={https://www.thebsa.org.uk/wp-content/uploads/2014/04/Recommended-procedure-for-the-Caloric-test.pdf},
   author={British Society of Audiology},
   note={Accessed: 2019-08-07}
 }
 
-@misc{Idea2019,
+@misc{Idea:2019,
   title={{IDEA}: Individuals with Disabilities Education Act},
   url={https://sites.ed.gov/idea/},
   note={Accessed: 2019-08-07}
 }
 
-@book{KnoblauchIdea1998,
+@book{KnoblauchIdea:1998,
   title={IDEA's definition of disabilities},
   author={Knoblauch, Bernadette and Sorenson, Barbara},
   year={1998},
   publisher={ERIC Clearinghouse on Disabilities and Gifted Education Reston, VA}
 }
 
-@inproceedings{ChenSmartphone2017,
+@inproceedings{ChenSmartphone:2017,
   title={Smartphone-based self hearing diagnosis using hearing aids},
   author={Chen, Fei and Wang, Shuai},
   booktitle={2017 IEEE 3rd Information Technology and Mechatronics Engineering Conference (ITOEC)},
@@ -107,7 +107,7 @@
   organization={IEEE}
 }
 
-@article{ChenSmartphone2018,
+@article{ChenSmartphone:2018,
   title={Smartphone-Based Hearing Self-Assessment System Using Hearing Aids with Fast Audiometry Method},
   author={Chen, Fei and Wang, Shuai and Li, Juanjuan and Tan, Huajun and Jia, Wen and Wang, Zhihua},
   journal={IEEE transactions on biomedical circuits and systems},
@@ -118,7 +118,7 @@
   publisher={IEEE}
 }
 
-@inproceedings{YaoWebHearingDiagnosis2009,
+@inproceedings{YaoWebHearingDiagnosis:2009,
   title={Design of a web services based system for remote hearing diagnosis},
   author={J. {Yao} and Y. {Wan} and G. {Givens}},
   booktitle={2009 Annual International Conference of the IEEE Engineering in Medicine and Biology Society},
@@ -130,7 +130,7 @@
   organization={IEEE}
 }
 
-@inproceedings{KochanekAudiometer2007,
+@inproceedings{KochanekAudiometer:2007,
   title={A Universal Computer Audiometer for Objective Hearing Testing and Screening},
   author={K. {Kochanek} and L. {Sliwa} and J. {Zajac} and H. {Skarzynski}},
   booktitle={2007 IEEE International Workshop on Medical Measurement and Applications},
@@ -141,7 +141,7 @@
   organization={IEEE}
 }
 
-@article{YaoBrowser2015,
+@article{YaoBrowser:2015,
   title={A browser-server-based tele-audiology system that supports multiple hearing test modalities},
   author={Yao, Jianchu and Yao, Daoyuan and Givens, Gregg},
   journal={Telemedicine and e-Health},
@@ -152,7 +152,7 @@
   publisher={Mary Ann Liebert, Inc. 140 Huguenot Street, 3rd Floor New Rochelle, NY 10801 USA}
 }
 
-@article{Rahne2016,
+@article{Rahne:2016,
   title={A software tool for pure-tone audiometry},
   author={Rahne, T and Buthut, F and Pl{\"o}{\ss}l, S and Plontke, SK},
   journal={Hno},
@@ -163,7 +163,7 @@
   publisher={Springer}
 }
 
-@article{FouladAutomated2013,
+@article{FouladAutomated:2013,
   title={Automated audiometry using apple iOS-based application technology},
   author={Foulad, Allen and Bui, Peggy and Djalilian, Hamid},
   journal={Otolaryngology--Head and Neck Surgery},
@@ -174,7 +174,7 @@
   publisher={SAGE Publications Sage CA: Los Angeles, CA}
 }
 
-@article{SerenWeb2009,
+@article{SerenWeb:2009,
   title={Web-based hearing screening test},
   author={Seren, Erdal},
   journal={Telemedicine and e-Health},
@@ -185,7 +185,7 @@
   publisher={Mary Ann Liebert, Inc. 140 Huguenot Street 3rd Floor New Rochelle, NY 10801 USA}
 }
 
-@article{GivensInternet2003,
+@article{GivensInternet:2003,
   title={Internet-based tele-audiometry system for the assessment of hearing: a pilot study},
   author={Givens, Gregg D and Blanarovich, Adrian and Murphy, Timothy and Simmons, Scott and Blach, David and Elangovan, Saravanan},
   journal={Telemedicine Journal and E-health},
@@ -196,7 +196,7 @@
   publisher={Mary Ann Liebert, Inc.}
 }
 
-@article{JobVisaudio1996,
+@article{JobVisaudio:1996,
   title={VISAUDIO: a Windows software application for Bekesy audiogram analysis and hearing research},
   author={Job, A and Buland, F and Maumet, L and Picard, J},
   journal={Computer methods and programs in biomedicine},
@@ -207,7 +207,7 @@
   publisher={Elsevier}
 }
 
-@article{SamelliTablet2018,
+@article{SamelliTablet:2018,
   title={Tablet-based tele-audiometry: Automated hearing screening for schoolchildren},
   author={Samelli, Alessandra G and Rabelo, Camila M and Sanches, Seisse G Gandolfi and Martinho, Ana C and Matas, Carla G},
   journal={Journal of telemedicine and telecare},
@@ -216,7 +216,7 @@
   publisher={SAGE Publications Sage UK: London, England}
 }
 
-@article{samelliTablet2017,
+@article{SamelliTablet:2017,
   title={Tablet-based hearing screening test},
   author={Samelli, Alessandra G and Rabelo, Camila M and Sanches, Seisse GG and Aquino, Camila P and Gonzaga, Denise},
   journal={Telemedicine and e-Health},
@@ -227,7 +227,7 @@
   publisher={Mary Ann Liebert, Inc. 140 Huguenot Street, 3rd Floor New Rochelle, NY 10801 USA}
 }
 
-@article{BarczikAccuracy2018,
+@article{BarczikAccuracy:2018,
   title={Accuracy of Smartphone Self-Hearing Test Applications Across Frequencies and Earphone Styles in Adults},
   author={Barczik, Jessica and Serpanos, Yula C},
   journal={American journal of audiology},
@@ -238,7 +238,7 @@
   publisher={ASHA}
 }
 
-@article{AbuSmartphone2016,
+@article{AbuSmartphone:2016,
   title={Smartphone-based audiometric test for screening hearing loss in the elderly},
   author={Abu-Ghanem, Sara and Handzel, Ophir and Ness, Lior and Ben-Artzi-Blima, Miri and Fait-Ghelbendorf, Karin and Himmelfarb, Mordechai},
   journal={European archives of oto-rhino-laryngology},
@@ -249,7 +249,7 @@
   publisher={Springer}
 }
 
-@article{MahomedClinical2016,
+@article{MahomedClinical:2016,
   title={Clinical validity of hearScreen\textsuperscript{TM} smartphone hearing screening for school children},
   author={Mahomed-Asmail, Faheema and Swanepoel, De Wet and Eikelboom, Robert H and Myburgh, Hermanus C and Hall, James},
   journal={Ear and hearing},
@@ -260,7 +260,7 @@
   publisher={Wolters Kluwer}
 }
 
-@article{RendaSmartphone2016,
+@article{RendaSmartphone:2016,
   title={Smartphone based audiometric test for confirming the level of hearing; is it useable in underserved areas},
   author={Renda, Levent and Selcuk, Omer Tarik and Eyig{\"o}r, H{\"u}lya and Osma, {\"U}st{\"u}n and Y{\i}lmaz, Mustafa Deniz},
   journal={J Int Adv Otol},
@@ -270,7 +270,7 @@
   year={2016}
 }
 
-@article{HandzelSmartphone2013,
+@article{HandzelSmartphone:2013,
   title={Smartphone-based hearing test as an aid in the initial evaluation of unilateral sudden sensorineural hearing loss},
   author={Handzel, Ophir and Ben-Ari, Oded and Damian, Doris and Priel, Maayan M and Cohen, Jacob and Himmelfarb, Mordechai},
   journal={Audiology and Neurotology},
@@ -281,7 +281,7 @@
   publisher={Karger Publishers}
 }
 
-@article{McphersonHearing2010,
+@article{McphersonHearing:2010,
   title={Hearing screening for school children: comparison of low-cost, computer-based and conventional audiometry},
   author={McPherson, B and Law, MMS and Wong, MSM},
   journal={Child: care, health and development},
@@ -292,7 +292,7 @@
   publisher={Wiley Online Library}
 }
 
-@article{LivshitzApplication2017,
+@article{LivshitzApplication:2017,
   title={Application-based hearing screening in the elderly population},
   author={Livshitz, Leonid and Ghanayim, Reem and Kraus, Carmi and Farah, Raymond and Even-Tov, Ella and Avraham, Yaniv and Sharabi-Nov, Adi and Gilbey, Peter},
   journal={Annals of Otology, Rhinology \& Laryngology},
@@ -303,7 +303,7 @@
   publisher={SAGE Publications Sage CA: Los Angeles, CA}
 }
 
-@techreport{ANSIS3.6-1996,
+@techreport{ANSIS3.6-1996:1996,
   type = {Standard},
   key = {ANSI S3.6-1996},
   month = {},
@@ -321,7 +321,7 @@
   note={Accessed: 2019-08-07}
 }
 
-@book{GammaDesign1994,
+@book{GammaDesign:1994,
   title={Design patterns: elements of reusable object-oriented software},
   author={Gamma, Erich and Helm, Richard and Johnson, Ralph and Vlissides, John},
   year={1994},
@@ -329,7 +329,7 @@
   publisher={Addison-Wesley Professional}
 }
 
-@article{SmithPatterns2009,
+@article{SmithPatterns:2009,
   title={Patterns-wpf apps with the model-view-viewmodel design pattern},
   author={Smith, Josh},
   journal={MSDN magazine},
@@ -337,37 +337,37 @@
   year={2009}
 }
 
-@misc{Sqlite2019,
+@misc{Sqlite:2019,
   title={{SQL}ite},
   url={https://www.sqlite.org/index.html},
   note={Accessed: 2019-08-07}
 }
 
-@misc{OxyPlot2019,
+@misc{OxyPlot:2019,
   title={{O}xy{P}lot: A cross-platform plotting library for {.NET}},
   url={https://github.com/oxyplot},
   note={Accessed: 2019-08-07}
 }
 
-@misc{Mono2019,
+@misc{Mono:2019,
   title={Mono: Cross platform, open source {.NET} framework},
   url={https://www.mono-project.com/},
   note={Accessed: 2019-08-07}
 }
 
-@misc{Doxygen2019,
+@misc{Doxygen:2019,
   title={Doxygen},
   url={http://www.doxygen.nl/},
   note={Accessed: 2019-08-07}
 }
 
-@misc{Wix2019,
+@misc{Wix:2019,
   title={{WiX} Toolset: The most powerful set of tools available to create your {W}indows Installation Experience},
   url={https://wixtoolset.org/},
   note={Accessed: 2019-08-07}
 }
 
-@misc{VisualStudio2019,
+@misc{VisualStudio:2019,
   title={Microsoft Visual Studio Downloads},
   url={https://visualstudio.microsoft.com/downloads/},
   note={Accessed: 2019-08-07}
